[package]
name = "everybody-codes-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
clap = { version = "4.5.51", features = ["derive"] }
clap_derive = "4.5.49"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
test-case = "3.3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
