[package]
name = "everybody-codes-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
clap = { version = "4.5.51", features = ["derive"] }
clap_derive = "4.5.49"
hex = { version = "0.4.3", features = ["serde"] }
image = "0.25.8"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
test-case = "3.3.1"
thiserror = "2.0.17"
ureq = { version = "3.1.4", features = ["cookies", "json"] }
